# bookverse-recommendations

./: .coverage  .gitignore  Dockerfile  Dockerfile.worker  PLAN_OF_ACTION.md  README.md  coverage.xml  pyproject.toml  pytest.ini  requirements.txt
.github/scripts/: apptrust_rollback.py  http_debug.sh  promote_lib.sh
.github/workflows/: build.yml  ci-shared.yml  ci.yml  promote-shared.yml  promote.reusable.yml  promote.std.yml  promote.yml  promotion-rollback.yml  rollback.yml  shared-build.yml
.jfrog/: config.yml
.venv311/: pyvenv.cfg
app/: __init__.py  algorithms.py  api.py  auth.py  clients.py  indexer.py  main.py  schemas.py  settings.py  settings.py.backup  worker.py
config/: auth.env  recommendations-settings.yaml  version-map.yaml
docs/: ALGORITHM.md  ALGORITHM_GUIDE.md  API.md  ARCHITECTURE.md  CI_CD.md  CI_CD_ARCHITECTURE.md  CI_CD_PLAN.md  DEPLOYMENT.md  MACHINE_LEARNING.md  OPERATIONS.md  OVERVIEW.md  SERVICE_GUIDE.md  TROUBLESHOOTING.md  WORKFLOW_REFERENCE.md  openapi.yaml
libs/bookverse-core/: COMPREHENSIVE_E2E_ERROR_REPORT.md  DEMO_INTEGRATION.md  Dockerfile  PRIORITY_FIXES_COMPLETE.md  README.md  e2e_test_report.txt  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  test_failures.txt  validate-demo.sh
libs/bookverse-core/.github/workflows/: ci.yml  release.yml
libs/bookverse-core/app/: __init__.py  main.py
libs/bookverse-core/app/api/: __init__.py  demo_endpoints.py
libs/bookverse-core/bookverse_core/: __init__.py
libs/bookverse-core/bookverse_core.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
libs/bookverse-core/bookverse_core/api/: __init__.py  app_factory.py  exceptions.py  health.py  middleware.py  pagination.py  responses.py
libs/bookverse-core/bookverse_core/auth/: __init__.py  dependencies.py  health.py  jwt_auth.py  middleware.py  oidc.py
libs/bookverse-core/bookverse_core/config/: __init__.py  base.py  loaders.py  validation.py
libs/bookverse-core/bookverse_core/database/: __init__.py  pagination.py  session.py
libs/bookverse-core/bookverse_core/utils/: __init__.py  logging.py  validation.py
libs/bookverse-core/config/: demo-config.yaml  version-map.yaml
libs/bookverse-core/scripts/: integrate-demo.sh  test.sh  validate-integration.sh
libs/bookverse-core/tests/: __init__.py  conftest.py
libs/bookverse-core/tests/integration/: __init__.py
libs/bookverse-core/tests/unit/: __init__.py  test_api.py  test_auth.py  test_config.py
resources/: stopwords.txt
scripts/: apptrust_rollback.py
tests/: conftest.py  test_algorithms.py  test_api.py  test_simple.py
